feat: :sparkles: integrar notificaciones internas del sistema con servicio de correos y alertas